--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -75,6 +75,9 @@
 
 <!-- about_area_end  -->
 
+<%- include('./components/footer.ejs') %>
+
+
 
     <!-- JS here -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -308,6 +311,10 @@
             document.getElementById('formSubmitMessage').textContent = response.message;
             document.getElementById('successMessage').className = 'alert alert-success mb-4';
             document.getElementById('successMessage').style.display = 'block';
+
+            setTimeout(() => {
+                window.location.reload();
+            }, 2000); 
         }
     })
     .catch(error => {
