--- a/views/admin/components/usersTable.ejs
+++ b/views/admin/components/usersTable.ejs
@@ -17,45 +17,28 @@
             <table class="table table-bordered">
                 <thead>
                     <tr class="bg-light">
-                        <th scope="col">Name</th>
-                        <th scope="col">Father's Name</th>
-                        <th scope="col">Contact Number</th>
-                        <th scope="col">Email</th>
-                        <th scope="col">CNIC</th>
+                        <th scope="col" style="width: 4%;">#</th>
+                        <th scope="col">Name </th>
                         <th scope="col">IMS Student</th>
-                        <th scope="col">Institute</th>
-                        <th scope="col">Student ID No</th>
-                        <th scope="col">Register As</th>
-                        <th scope="col">Total Amount</th>
-                        <th scope="col">Ambassador Name</th>
-
-                        <th scope="col">
-                            <div class="dropdown">
-                                <img src="https://plus.unsplash.com/premium_photo-1669324357471-e33e71e3f3d8?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="rounded-circle" alt="image" width="30">
-                                <button class="btn btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                </button>
-                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <li><img src="second-image-url" class="dropdown-item" alt="Second Image" width="30"></li>
-                                    <li><img src="third-image-url" class="dropdown-item" alt="Third Image" width="30"></li>
-                                </ul>
-                            </div>
-                        </th>
-                        
-
-                        <th scope="col">Status</th>
-
+                        <th scope="col">Contact Number</th>
+                        <th scope="col">Action</th>
 
                     </tr>
                 </thead>
                 <tbody>
-
+                    <% if (locals.registered_users) {%>
+                        <% for (const [index,user] of registered_users.entries()) { %>
+                            <tr>
+                                <td><%=index+1%></td>
+                                <td><%=user.name%></td>
+                                <td><%=user.is_ims_student%></td>
+                                <td><%=user.contact_number%></td>
+                                <td><button type="button" class="trigger">Details</button></td>
+                            </tr>
+                        <% } %>
+                    <% } %>
                 </tbody>
             </table>
         </div>
-        </div>
-
-
     </section>
-
-    </div>
+</main>
