--- a/views/admin/registeredUsers.ejs
+++ b/views/admin/registeredUsers.ejs
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="img/logo.png" rel="icon">
+  <link href="/img/logo.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
@@ -37,8 +37,9 @@
 
 
   <!-- Template Main CSS File -->
-  <link href="css/admin.css" rel="stylesheet">
-  <link href="css/table.css" rel="stylesheet">
+  <link href="/css/admin.css" rel="stylesheet">
+  <link href="/css/table.css" rel="stylesheet">
+  <link href="/css/modal.css" rel="stylesheet">
 
 
 
@@ -47,18 +48,40 @@
 <body>
 
 
-<!--  ======= Header ======= -->
-<%- include('./components/header.ejs') %>
+  <!--  ======= Header ======= -->
+  <%- include('./components/header.ejs') %>
 
-<!-- sidebar -->
-<%- include('./components/sidebar.ejs') %>
+  <!-- sidebar -->
+  <%- include('./components/sidebar.ejs') %>
 
-<%- include('./components/usersTable.ejs') %>
+  <%- include('./components/usersTable.ejs') %>
+
+  <button id="modalBtn" class="firstButton">Click Me</button>
+
+<div id="mainModal" class="modal modalToggle">
+    <div class="modalBody">
+      <div class="modalHeader">
+        <h2>Model Header <span onClick="closeFunction()" class="cross">&#10005;</span></h2>       
+      </div>
+      <div class="modalContant">
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+        </p>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+        </p>
+      </div>
+      <div class="modalFooter">
+        <button onClick="closeFunction()" class="footerbtn cross">OK</button>
+      </div>
+    </div>
+  </div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-<script src="js/admin.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  <script src="/js/admin.js"></script>
+  <script src="/js/modal.js"></script>
 
 </body>
 </html>
