worked on frontend

--- a/views/components/programDetails.ejs
+++ b/views/components/programDetails.ejs
@@ -21,7 +21,7 @@
                             <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <img src="img/program_details/1.png" alt="">
                             </div>
-                            <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">SHAB-E-RONAQ - 6:00PM to 9:30PM (Qawali Night, Food, Stalls etc.)</h4>
+                            <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Flute Performance, Rabab Performance, Two types organised Attans, Main qawali</h4>
                         </div>
                     </div>
                     <div class="single_propram">
@@ -34,8 +34,9 @@
                             <div class="thumb wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
                                 <img src="img/program_details/2.png" alt="">
                             </div>
-                            <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".6s">RETRO/CULTURAL NIGHT - 6:00PM to 9:30PM
-                                (Open Mics, Performances, Skits etc)</h4>
+                            <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".6s"> Old Money ft Pakistani Edition - 6:00PM to 9:30PM</h4>
+                            <h4 class="wow fadeInRight mt-2" data-wow-duration="1s" data-wow-delay=".6s"> Skit Performances, Old School Vibe, Activities & Games, Two Performances by artists and bands(Surprise)</h4>
+
                         </div>
                     </div>
                     <div class="single_propram">
@@ -48,8 +49,8 @@
                             <div class="thumb  wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <img src="img/program_details/3.png" alt="">
                             </div>
-                            <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">CLOSING CEREMONY & NETWORKING DINNER -
-                                6:30PM to 10:00PM</h4>
+                            <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">CLOSING CEREMONY &  Formal Dinner -
+                               <br> Host Team, Winner of games, Runner ups & Staff</h4>
                         </div>
                     </div>
                    
