--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -40,7 +40,9 @@
           @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
-          }
+            }
+
+            
     </style>
 </head>
 <body>
@@ -69,6 +71,11 @@
        </div>
  </div>
 <!-- bradcam_area end -->
+
+<div class="moving-message mt-2 " id="movingMessage">
+    <p class="text-danger">Last date for registration is 28th March 2024</p>
+</div>
+
 
 <!-- about_area_start  -->
 <%- include('./components/imStudentRegister.ejs') %>
@@ -353,5 +360,21 @@
     }
   }
     </script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+
+<script>
+    // Anime.js animation
+    anime({
+            targets: '#movingMessage',
+            translateX: [-1000, window.innerWidth + 1000], // Move from left to right
+            duration: 60000, // Duration in milliseconds (60 seconds)
+            easing: 'linear', // Linear easing for constant speed
+            loop: true, // Loop the animation infinitely
+            delay: 1000 // Delay before restarting the animation (in milliseconds)
+        });
+</script>
+
+
 </body>
 </html>
