--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -334,7 +334,7 @@
                   <span class="badge text-danger fs-20">*</span>
                 </label>
                 <input
-                  type="email"
+                  type="number"
                   class="form-control"
                   name="badmintonSecondPlayerCnic"
                   id="badmintonSecondPlayerCnic"
