--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -585,6 +585,7 @@ h6 {
 
 .dashboard .top-selling .table tbody td {
   vertical-align: middle;
+  font-size: 30px;
 }
 
 .dashboard .top-selling img {
