--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -315,31 +315,19 @@
               </div>
 
               <div class="mb-2">
-                <label for="badmintonSecondPlayerContact" class="form-label"
-                  >Contact Number
+                <label for="badmintonSecondPlayerContact" class="form-label">Contact Number
                   <span class="badge text-danger fs-20">*</span>
                 </label>
-                <input
-                  type="number"
-                  class="form-control"
-                  name="badmintonSecondPlayerContact"
-                  id="badmintonSecondPlayerContact"
-                  placeholder="Enter Player Contact Number"
-                />
+                <input type="number" class="form-control" name="badmintonSecondPlayerContact" id="badmintonSecondPlayerContact"
+                  placeholder="Enter Player Contact Number" />
               </div>
 
               <div class="mb-2">
-                <label for="badmintonSecondPlayerCnic" class="form-label"
-                  >CNIC
+                <label for="badmintonSecondPlayerCnic" class="form-label">CNIC
                   <span class="badge text-danger fs-20">*</span>
                 </label>
-                <input
-                  type="number"
-                  class="form-control"
-                  name="badmintonSecondPlayerCnic"
-                  id="badmintonSecondPlayerCnic"
-                  placeholder="Enter Player CNIC"
-                />
+                <input type="number" class="form-control" name="badmintonSecondPlayerCnic" id="badmintonSecondPlayerCnic"
+                  placeholder="Enter Player CNIC" />
               </div>
 
               <div class="mb-2" id="badmintonSecondPlayerCnicImageDiv">
@@ -525,18 +513,10 @@
             style="display: none"
           >
             <div class="mb-3 mt-2">
-              <label for="experience" class="form-label"
-                >Previous MUN/PNA Experience</label
-              >
-
-              <input
-                type="number"
-                class="form-control"
-                id="experience"
-                disabled
-                name="experience"
-              />
+              <label for="experience" class="form-label">Previous MUN/PNA Experience</label>
+              <input type="number" class="form-control" id="experience" name="experience" />
             </div>
+
             <div class="mb-3 mt-2">
               <label for="LeaderOfHouse" class="form-label"
                 >Are you expecting to be leader of the house?</label
